idek man changes

--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
-    "name": "supportslackbot",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "npm install; npx tsx ./main.ts"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-      "@slack/bolt": "^3.21.4",
-      "@types/fs-extra": "^11.0.4",
-      "@types/node": "^22.5.5",
-      "date-fns": "^4.1.0",
-      "dotenv": "^16.4.5",
-      "fs-extra": "^11.2.0",
-      "ts-node": "^10.9.2",
-      "tsx": "^4.19.1",
-      "typescript": "^5.6.2"
-    }
+  "name": "shipwrecked-ai",
+  "private": true,
+  "main": "index.js",
+  "description": "",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm install; npx tsx ./src/index.ts"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/fs-extra": "^11.0.4",
+    "@types/node": "^22.5.5",
+    "@types/pg": "^8.11.13",
+    "drizzle-kit": "^0.31.0"
+  },
+  "dependencies": {
+    "@slack/bolt": "^4.2.1",
+    "@slack/web-api": "^7.9.1",
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.42.0",
+    "fs-extra": "^11.2.0",
+    "openai": "^4.96.0",
+    "pg": "^8.15.2",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.2"
   }
+}
