--- a/manifest.yaml
+++ b/manifest.yaml
@@ -15,6 +15,7 @@ oauth_config:
     bot:
       - app_mentions:read
       - channels:history
+      - groups:history
       - channels:read
       - chat:write
       - chat:write.customize
@@ -29,6 +30,7 @@ settings:
   event_subscriptions:
     bot_events:
       - message.channels
+      - message.groups
       - reaction_added
       - app_home_opened
   interactivity:
