--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "main": "index.js",
     "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "npm install; npx tsx ./main.ts"
+      "start": "npx tsx ./main.ts"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "@slack/bolt": "^3.21.4",
+      "@slack/bolt": "4.5.0",
       "@types/fs-extra": "^11.0.4",
       "@types/node": "^22.5.5",
       "date-fns": "^4.1.0",
